monospace font should resolve alignment issues in leaderboard tab ( resolve #18 )

--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@
   text-align: center;
 }
 .console-style {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .warning {
